--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   text-transform: uppercase;
+  font-family: var(--font-jetbrains);
 }
 
 .font-custom {
